run pre-commit on all files

--- a/Makefile.site
+++ b/Makefile.site
@@ -1,5 +1,5 @@
 test:
-	pre-commit
+	pre-commit run --all
 
 asdf:
 	cat .tool-versions| awk '{print $$1}' | while read -r a; do asdf list-all "$$a" | sed "s#^#$$a #"; done | sort > .tool-versions-all
