install pipx globally

--- a/Dockerfile.tower
+++ b/Dockerfile.tower
@@ -197,7 +197,7 @@ FROM ${IMAGE} as precommit
 COPY --link --chown=ubuntu:ubuntu --from=golang /home/ubuntu/.asdf /home/ubuntu/.asdf
 COPY --link --chown=ubuntu:ubuntu .tool-versions .
 RUN git init
-RUN /home/ubuntu/.local/bin/pipx install pre-commit
+RUN pipx install pre-commit
 COPY --link --chown=ubuntu:ubuntu .pre-commit-config.yaml .
 RUN /home/ubuntu/.local/bin/pre-commit install
 RUN env PATH=$PATH:$HOME/.asdf/shims /home/ubuntu/.local/bin/pre-commit run --all
