--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -22,6 +22,8 @@ RUN apt-get update \
     xdg-utils figlet lolcat \
     libxcb1-dev libxcb-render0-dev libxcb-shape0-dev libxcb-xfixes0-dev
 
+RUN pip install pipx
+
 RUN curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/focal.noarmor.gpg | tee /usr/share/keyrings/tailscale-archive-keyring.gpg >/dev/null \
     && curl -fsSL https://pkgs.tailscale.com/stable/ubuntu/focal.tailscale-keyring.list | tee /etc/apt/sources.list.d/tailscale.list \
     && apt-get update \
@@ -65,15 +67,10 @@ ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
 WORKDIR /home/ubuntu
 
-RUN pip install --user pipx
-RUN /home/ubuntu/.local/bin/pipx install --pip-args "keyring_pass" poetry
-RUN /home/ubuntu/.local/bin/pipx install watchdog
-RUN /home/ubuntu/.local/bin/pipx install 'python-dotenv[cli]'
-RUN /home/ubuntu/.local/bin/pipx install yq
-
-RUN sudo add-apt-repository -y ppa:deadsnakes/ppa
-RUN sudo apt install -y python3.9 python3.9-distutils
-RUN python3.9 -m pip install pipx
+RUN pipx install --pip-args "keyring_pass" poetry
+RUN pipx install watchdog
+RUN pipx install 'python-dotenv[cli]'
+RUN pipx install yq
 
 COPY --chown=ubuntu:ubuntu .vim .vim
 COPY --chown=ubuntu:ubuntu .vimrc .
