--- a/Dockerfile.tower
+++ b/Dockerfile.tower
@@ -98,7 +98,7 @@ RUN cd /usr/local/bin && curl -sSL https://github.com/buildkite/agent/releases/d
     | sudo tar xvfz -
 
 FROM ${IMAGE} as pants
-RUN python3.9 -m pipx install pantsbuild.pants
+RUN python -m pipx install pantsbuild.pants
 
 FROM ${IMAGE} as asdf
 ARG ASDF
