--- a/fly/Makefile
+++ b/fly/Makefile
@@ -9,3 +9,5 @@ defn0:
 
 defn1:
 	flyctl scale --app defn count 1
+	until sudo ping -c1 defn; do :; done
+	code --folder-uri vscode-remote://ssh-remote+defn/home/ubuntu
