--- a/Makefile.site
+++ b/Makefile.site
@@ -7,6 +7,8 @@ asdf:
 cache:
 	dotenv run docker build -f Dockerfile.base -t defn/dev:cache-base --build-arg BUILDKIT_INLINE_CACHE=1 --build-arg IMAGE=ubuntu:20.04 $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
 	dotenv run docker build -f Dockerfile.tower -t defn/dev:cache-tower --build-arg BUILDKIT_INLINE_CACHE=1 --build-arg IMAGE=defn/dev:base $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
+	docker push defn/dev:cache-base
+	docker push defn/dev:cache-tower
 
 base:
 	dotenv run docker build -f Dockerfile.base -t defn/dev:base --cache-from defn/dev:cache-base --build-arg IMAGE=ubuntu:20.04 $(shell cat .env | cut -d= -f1 | while read -r a; do echo --build-arg $$a; done) .
