--- a/Makefile.site
+++ b/Makefile.site
@@ -43,4 +43,4 @@ live:
 	env SSH_AUTH_SOCK="$(shell ls -td /tmp/vscode-ssh-auth-sock-* | head -1)" ssh-add -L
 
 monitor:
-	rm -f .dead; while true; do if ! make live > /dev/null; then touch .dead; for a in {1..6}; do if make live; then rm -f .dead; break; fi; echo MAYBE DEAD; sleep 10; done; fi; if test -f .dead; then echo DEAD; pgrep [t]ilt; pkill [t]ilt; break; fi; date; sleep 60; done
+	rm -f .dead; while true; do if ! make live > /dev/null; then touch .dead; for a in 1 2 3 4 5 6; do if make live; then rm -f .dead; break; fi; echo MAYBE DEAD; sleep 10; done; fi; if test -f .dead; then echo DEAD; pgrep [t]ilt; pkill [t]ilt; break; fi; date; sleep 60; done
