--- a/Makefile.site
+++ b/Makefile.site
@@ -34,7 +34,7 @@ ci:
 
 up:
 	cd fly && $(MAKE) login up
-	tilt up
+	~/bin/e tilt up
 
 down:
 	cd fly && $(MAKE) down
@@ -46,4 +46,4 @@ monitor:
 	rm -f .dead; while true; do if ! $M(AKE) live > /dev/null; then touch .dead; for a in 1 2 3 4 5 6; do if $(MAKE) live; then rm -f .dead; break; fi; echo MAYBE DEAD; sleep 10; done; fi; if test -f .dead; then echo DEAD; pgrep [t]ilt; pkill [t]ilt; break; fi; date; sleep 60; done
 
 dev:
-	while true; do if $(MAKE) live; then ~/bin/e $(MAKE) up; fi; sleep 5 ; done
+	while true; do if $(MAKE) live; then $(MAKE) up; fi; sleep 5 ; done
