--- a/Makefile.site
+++ b/Makefile.site
@@ -41,10 +41,10 @@ down:
 	pkill [t]ilt || true
 
 live:
-	env SSH_AUTH_SOCK="$(shell ls -td /tmp/vscode-ssh-auth-sock-* | head -1)" ssh-add -L
+	@env SSH_AUTH_SOCK="$(shell ls -td /tmp/vscode-ssh-auth-sock-* 2>/dev/null | head -1)" ssh-add -L 2>/dev/null >/dev/null
 
 monitor:
-	rm -f .dead; while true; do if ! $(MAKE) live > /dev/null; then touch .dead; for a in 1 2 3 4 5 6; do if $(MAKE) live; then rm -f .dead; break; fi; echo MAYBE DEAD; sleep 10; done; fi; if test -f .dead; then $(MAKE) down; break; fi; date; sleep 60; done
+	rm -f .dead; while true; do if ! $(MAKE) live 2>/dev/null >/dev/null; then touch .dead; for a in 1 2 3 4 5 6; do if $(MAKE) live 2>/dev/null >/dev/null; then rm -f .dead; break; fi; echo MAYBE DEAD $$a; sleep 10; done; fi; if test -f .dead; then $(MAKE) down; break; fi; echo "$$(date) live"; sleep 60; done
 
 dev:
-	while true; do if $(MAKE) live; then $(MAKE) up; fi; sleep 5 ; done
+	@while true; do if $(MAKE) live 2>/dev/null >/dev/null; then $(MAKE) up; fi; echo "$$(date) zzz"; sleep 5 ; done
