--- a/Makefile.site
+++ b/Makefile.site
@@ -39,6 +39,7 @@ up:
 down:
 	cd fly && $(MAKE) down
 	pkill [t]ilt || true
+	rm -f "${SSH_AUTH_SOCK}"
 
 live:
 	@env SSH_AUTH_SOCK="$(shell ls -td /tmp/vscode-ssh-auth-sock-* 2>/dev/null | head -1)" ssh-add -L 2>/dev/null >/dev/null
