--- a/fly/Makefile
+++ b/fly/Makefile
@@ -11,7 +11,7 @@ ping-docker:
 	while true; do $(MAKE) start-docker; sleep 540; done
 
 trigger-docker:
-	socat TCP-LISTEN:2375,reuseaddr,fork EXEC:"'bash -c \"while ! netcat -z localhost 2377; do $(MAKE) start-docker; done; socat - "TCP:localhost:2377\""'",nofork
+	socat TCP-LISTEN:2375,reuseaddr,fork EXEC:"'bash -c \"(while ! netcat -z localhost 2377; do $(MAKE) start-docker; done) 1>/dev/null 2>&1; socat - "TCP:localhost:2377\""'",nofork
 
 proxy:
 	while true; do $(MAKE) start-docker; flyctl --app "$(shell flyctl apps list | grep 'fly-builder' | awk '{print $$1}' | head -1)" proxy 2377:2375; sleep 5; done
