start docker first

--- a/fly/Makefile
+++ b/fly/Makefile
@@ -1,6 +1,6 @@
 login:
 	if ! flyctl auth whoami; then flyctl auth login; fi
-	#flyctl auth docker
+	flyctl auth docker
 
 start-docker:
 	date > docker/.time
