--- a/fly/Makefile
+++ b/fly/Makefile
@@ -16,7 +16,7 @@ trigger-docker:
 proxy:
 	while true; do flyctl --app "$(shell flyctl apps list | grep 'fly-builder' | awk '{print $$1}' | head -1)" proxy 2377:2375; sleep 1; done
 
-defn:
+defnx:
 	flyctl deploy --remote-only --config $@.toml
 	while sudo ping -c1 defn; do :; done
 	sleep 15
