--- a/Makefile.site
+++ b/Makefile.site
@@ -49,5 +49,5 @@ monitor_inner:
 	rm -f .dead; while true; do if ! $(MAKE) live 2>/dev/null >/dev/null; then touch .dead; for a in 1 2 3 4 5 6; do if $(MAKE) live 2>/dev/null >/dev/null; then rm -f .dead; break; fi; echo MAYBE DEAD $$a; sleep 10; done; fi; if test -f .dead; then $(MAKE) down; break; fi; echo "$$(date) live"; sleep 60; done
 
 dev:
-	@~/bin/e pre-commit run all
+	@~/bin/e pre-commit run --all
 	@while true; do if ~/bin/e $(MAKE) live 2>/dev/null >/dev/null; then ~/bin/e $(MAKE) up; fi; echo "$$(date) zzz"; sleep 5 ; done
