install npm, cdktf-cli

--- a/Dockerfile.tower
+++ b/Dockerfile.tower
@@ -215,10 +215,18 @@ RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf plugin-add golang'
 RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf install golang'
 
 FROM ${IMAGE} as nodejs
+ARG NPM
 COPY --link --chown=ubuntu:ubuntu --from=asdf /home/ubuntu/.asdf /home/ubuntu/.asdf
 COPY --link --chown=ubuntu:ubuntu .tool-versions .
 RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf plugin-add nodejs'
 RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf install nodejs'
+RUN bash -c 'source $HOME/.asdf/asdf.sh && npm install -g npm@${NPM}'
+
+FROM ${IMAGE} as cdktf
+ARG CDKTF
+COPY --link --chown=ubuntu:ubuntu --from=nodejs/home/ubuntu/.asdf /home/ubuntu/.asdf
+COPY --link --chown=ubuntu:ubuntu .tool-versions .
+RUN bash -c 'source $HOME/.asdf/asdf.sh && npm install -g cdktf-cli@${CDKTF}'
 
 FROM ${IMAGE} as precommit
 COPY --link --chown=ubuntu:ubuntu --from=golang /home/ubuntu/.asdf /home/ubuntu/.asdf
@@ -267,7 +275,7 @@ COPY --link --chown=ubuntu:ubuntu --from=consul /home/ubuntu/.asdf /home/ubuntu/
 COPY --link --chown=ubuntu:ubuntu --from=cloudflared /home/ubuntu/.asdf /home/ubuntu/.asdf
 COPY --link --chown=ubuntu:ubuntu --from=terraform /home/ubuntu/.asdf /home/ubuntu/.asdf
 COPY --link --chown=ubuntu:ubuntu --from=golang /home/ubuntu/.asdf /home/ubuntu/.asdf
-COPY --link --chown=ubuntu:ubuntu --from=nodejs /home/ubuntu/.asdf /home/ubuntu/.asdf
+COPY --link --chown=ubuntu:ubuntu --from=cdktf /home/ubuntu/.asdf /home/ubuntu/.asdf
 COPY --link --chown=ubuntu:ubuntu .tool-versions .
 RUN bash -c 'source $HOME/.asdf/asdf.sh && asdf install && asdf reshim'
 
